--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__figure">
           <img class="lead__image" src="./images/lead-polka.jpg" alt="фото полки в поезде">
-          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
-        </figure>
+        </figure>        
+        <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -42,23 +42,23 @@
           <li><span class="intro__list-item">Аэропортов</span> 241</li>
         </ul>
       </section>
-      <section class="photo-grid">
+      <section class="photo-grid" aria-label="Фотоальбом">
         <ul class="photo-grid__container">
           <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="окно поезда"></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="заснеженные горы в Австралии"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="волк в тумане"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="сочи"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="лед"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="байкал"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="эльбрус"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="знак перехода"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="камчатка1"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="камчатка2"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="байкал 2"></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="ергаки"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="волк на стогу сена"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="сочинские леса в тумане"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="колесо машины на льду озера"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="прибрежная линия озера Байкал"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="пик горы Эльбрус"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="знак перехода на фоне волнореза"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="камчатские сопки в тумане"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="высокая камчатская сопка"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="вид на озеро Байкал"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Эргаки"></li>
         </ul>
       </section>
-      <section class="places">
+      <section class="places" aria-label="статьи про российские достопримечательности">
         <ul class="places__container">
           <li><article class="place">
             <h2 class="place__title">Куршская коса</h2>
